add svelte page

--- a/web/index.html
+++ b/web/index.html
@@ -1,165 +1,13 @@
-<link rel="stylesheet" type="text/css" href="./litewebchat.min.css">
-<redis-im></redis-im>
-
-<script type="module">
-  import {
-    defineComponent,
-    reactive,
-    ref,
-    html,
-    onMounted,
-    onUpdated,
-    onUnmounted
-  } from './index.js'
-  // } from 'https://unpkg.com/@vue/lit'
-
-  defineComponent('redis-im', () => {
-    const state = reactive({
-      messages: [],
-      contacts: [],
-      uid: '',
-      tuid: '',
-      avatar: './A.jpg',
-    })
-    const ws = ref()
-    const connect = (uid) => {
-      const w = new WebSocket(location.origin.replace('http', 'ws') + '/ws?user_id=' + uid);
-      w.onopen = () => {
-        state.messages
-      }
-      w.onclose = () => {
-        // connect()
-      }
-      w.onmessage = (evt) => {
-        if(typeof evt.data === "string") {
-          // console.log(evt, evt.data, typeof evt.data)
-          try{
-            const message = JSON.parse(evt.data)
-            if (message.message && message.message.action) {
-              const { uid, tuid, action } = message.message
-              console.log('action', action)
-              if (action == 'link') {
-                state.contacts.push({
-                  tuid: uid == state.uid ? tuid : uid,
-                  avatar: './A.jpg',
-                })
-              }
-            } else {
-              if (message.message) {
-                state.messages.push(message)
-              }
-            }
-          } catch(e) {
-            console.error(e)
-          }
-        }
-      }
-      ws.value = w
-    }
-    onUpdated(() => {
-      console.log(state.messages, state.contacts)
-    })
-    onMounted(() => {
-      // connect()
-    })
-    const onChange = e => {
-      state.uid = e.target.value
-      // state.tuid = e.target.value
-      connect(state.uid)
-    }
-
-    const send = e => {
-      const message = e.target.value
-      e.target.value = ''
-      ws.value.send(JSON.stringify({
-        action: 'send',
-        params: [state.uid, state.tuid, 'message', message]
-      }))
-    }
-
-    const select = (e) => {
-      const tuid = e.target.parentElement.getAttribute('data-uid')
-      console.log(e.target, tuid)
-      if (tuid) {
-        state.tuid = tuid
-      }
-    }
-
-    return () => html`
-      <link rel="stylesheet" type="text/css" href="./litewebchat.min.css">
-      <style>
-        .chat-app{
-          min-height: 98vh;
-          display: flex;
-        }
-        .contact{
-          width: 120px;
-          height: 100%;
-        }
-        .chatbox{
-          flex: 1;
-          padding-left: 5px;
-          border-left: 1px solid #c5d4c4;
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-end;
-          height: 98vh;
-        }
-        .lite-chatbox{
-          flex: 1;
-        }
-        .message{
-          bottom: 0;
-          width: 100%;
-          height: 40px;
-          border: 1px solid #c5d4c4;
-          border-radius: 20px;
-          padding: 0 20px;
-        }
-        .login{
-          min-height: 100vh;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-        }
-        .contact .item{
-          display: flex;
-          height: 50px;
-          align-items: center;
-          justify-content: center;
-        }
-        .contact .item .headIcon{
-          width: 34px;
-          height: 34px;
-          1px solid #c5d4c4;
-          border-radius: 100%;
-        }
-      </style>
-      ${!state.uid ? html`<div class="login"><input placeholder="input username" @change=${onChange}></div>` : html`
-        <div class="chat-app">
-          <div class="contact">
-            ${state.contacts.map(c => html`
-              <div class="item" data-uid=${c.tuid} @click=${select}>
-                <img class="headIcon radius" ondragstart="return false;" oncontextmenu="return false;" src=${c.avatar}>
-                <span class="name">${c.tuid}&nbsp;</span>
-              </div>
-            `)}
-          </div>
-          <div class="chatbox">
-          <div class="lite-chatbox">
-            ${state.messages.filter(i => i.message && (i.message.tuid == state.tuid || i.message.uid == state.tuid)).map(m => m.message ? html`
-              <div class="${m.message.tuid == state.uid ? "cleft" : "cright"} cmsg">
-                <img class="headIcon radius" ondragstart="return false;" oncontextmenu="return false;" src=${state.avatar}>
-                <span class="name">${m.message.uid}&nbsp;</span>
-                <span class="content">${m.message.message}</span>
-              </div>
-            ` : '')}
-          </div>
-          <input class="message" placeholder="input message" @change=${send}>
-          </div>
-        </div>
-      `}
-    `
-  })
-
-</script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Svelte</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
+</html>
